# gb-career-pilot-backend

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  Dockerfile  README.md  REDIS_CACHING_ANALYSIS.md  REDIS_IMPLEMENTATION_COMPLETE.md  SECURITY.md  docker-compose.yml  dockerCommand.txt  environment_setup.sh  pyproject.toml  railway.json  requirements.txt  ruff.toml  structure.txt  testsupabase.py
.github/: CODEOWNERS
.github/workflows/: backend-ci.yml
Documentation/: ADVANCED_PROMPT_STRATEGIES.md  Complete_Backend_GitHub_Issues (1).md  DATABASE_MIGRATIONS.md  ERROR_ANALYSIS_PYDANTIC_FIELDS_SET.md  FACTUAL_HALLUCINATION_BUG_ANALYSIS.md  FACTUAL_HALLUCINATION_FIX_SUMMARY.md  GROQ_API_MISSING_TYPE_FIELD_ANALYSIS.md  GROQ_MISSING_TYPE_FIX_IMPLEMENTATION.md  GROQ_RATE_LIMIT_413_ERROR.md  GROQ_UNSUPPORTED_ANNOTATIONS_FIX.md  HALLUCINATION_BUG_FIX_SUMMARY.md  HALLUCINATION_INTERCEPTOR_BUG_ANALYSIS.md  MEMORY_EXTRACTION_TYPE_FIELD_ERROR.md  PROMPT_IMPROVEMENT_ANALYSIS.md  VALIDATION_ERROR_MISSING_ROLE_ANALYSIS.md  project_structure.md
Errors/: path_errors.txt
src/: config.py  exceptions.py  import_test_data.py  main.py  rate_limiter.py  src.txt  test_sample.py
src/cache/: __init__.py  redis_client.py
src/database/: RECOMMENDATION_TABLES.sql  database.py  database_schema.sql  issues.sql  test_tables.sql
tests/: conftest.py  test_ai.py  test_ai_schemas.py  test_counselor_prompt.py  test_endpoints.py  test_integration.py  test_main.py  test_merge_karachi_universities.py  test_report_issues.py  test_sample.py  test_security.py
(+27 files in other folders)
