[project]
name = "gb-career-pilot-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.110.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.13.1",
    "pydantic[email]>=2.12.5",
    "pyjwt==2.8.0",
    "resend>=2.23.0",
    "sib-api-v3-sdk>=7.6.0",
]

[tool.mypy]
# This tells mypy to look inside the 'src' directory for modules
mypy_path = "src"

# This allows mypy to find modules even if they don't have an __init__.py
explicit_package_bases = true
namespace_packages = true

# Optional: suppress errors for 3rd party libs without stubs (like supabase)
ignore_missing_imports = true
